[package]
name = "tachyobench"
version = "0.1.0"
authors = ["Serge Barral <serge.barral@asynchronics.com>"]
edition = "2021"
rust-version = "1.59"
license = "MIT OR Apache-2.0"
repository = "https://github.com/asynchronics/tachyobench"

[dependencies]
asynchronix = { git = "https://github.com/asynchronics/asynchronix/", features = [ "dev-hooks" ] }
async-channel = "1"
async-std = "1"
async-task = "4"
flume = "0.10"
futures-channel = { version = "0.3", features = [ "sink" ] }
futures-util = { version = "0.3", features = [ "sink" ] }
lexopt = "0.2"
num_cpus = "1.13"
oorandom = "11.1"
postage = "0.5"
smolscale = "0.3"
tachyonix = "0.1"
thingbuf = "0.1"
tokio = { version = "1", features = [ "sync", "rt-multi-thread" ] }
